a lot of refactoring related to views

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,151 @@
  *= require_self
  *= require_tree .
  */
+.hide { display:none; }
+.hidden { display: none !important; }
+body .login, .login input, .login button, .login form {
+    /*position: relative;*/
+    behavior: url(/javascripts/PIE.htc);
+    padding: 15px 20px;
+    font-size: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+span.h3 {
+    position: relative;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 40%;
+    margin-right: auto;
+    /*margin-left: 50%;*/
+    /*margin-right: 50%;*/
+    /*width: 50%;*/
+    max-width: 300px;
+}
+body span#flasher {
+    /*position: absolute;*/
+    margin: auto;
+}
+
+body > span.flash {
+        font-weight: bold;
+        display: block;
+        position: relative;
+        line-height: 21px;
+        padding: 10px;
+        padding-right: 30px;
+}
+
+/*body > span.flash > span { display: block; }*/
+
+span.success, span.notice {
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
+    background-color: #4e7b22;
+    border-bottom: #4e7b22 1px solid;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#a3ce68', endColorstr = '#708e4a', GradientType = 0); /* IE6-9 */
+}
+span.error, span.alert {
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.35);
+    background-color: #8a252a;
+    border-bottom: #8a252a 1px solid;
+}
+
+body span#flasher a.close_flash {
+        position: absolute;
+        top: 15px;
+        right: 0;
+        cursor: pointer;
+}
+
+input[type="submit"] {
+    /*display: inline-block;*/
+    font-family: "Helvetica Neue", Arial, Verdana, sans-serif;
+    background-color: #eeeeee;
+    padding: 4px 10px 3px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 24px;
+    border: 1px solid #c5c4c4;
+    font-weight: bold;
+    border-bottom-color: #a7a6a6;
+    vertical-align: middle;
+    color:#7c7c7c;
+    text-shadow: 0 1px 1px rgba(255,255,255,0.8);
+    cursor:pointer !important;
+    margin-left: auto;
+    margin-right: auto;
+}
+input[type="submit"]:hover {
+    background-color: #eeeeee;
+    color:#7c7c7c;
+    text-decoration: none;
+    border-bottom-color: #b9b9b9;
+    opacity:1;
+}
+
+form .field {
+    margin: 10px 0 15px 0;
+    padding: 0;
+    font-size: 0;
+}
+
+form .field > * {
+  font-size: 14px;
+}
+
+form .field label {
+    color: #7c7c7c;
+    margin: 0;
+    vertical-align: middle;
+    display: inline-block;
+
+    padding: 0 5px;
+    min-width: 90px;
+    max-width: 140px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: auto;
+    line-height: 18px;
+    font-weight: bold;
+}
+
+
+form input {
+    width: auto;
+}
+.login form input[type="submit"] { width: 98%; }
+form textarea{
+    max-width:660px;
+}
+
+body #container {
+    max-width: 960px;
+    padding: 0 15px;
+    margin: auto;
+}
+
+body #container .mainpanel {
+    max-width: 900px;
+    padding: 0 5px;
+}
+body #container #internal_container {
+    background-color: #eee;
+    max-width: 90%;
+    /*margin: auto;*/
+}
+
+.login form {
+    width: 350px;
+}
+.login {
+    margin-top: 20%;
+}
+
+.header#login {
+    max-width: 90%;
+    background-color: #eef;
+    padding: 0 1px;
+}
